Prevent curved monitor clipping

--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@
   .cm-content {
     width: 100%;
     height: 100%;
-    transform: rotateY(-3deg) scaleX(1.03);
+    transform: rotateY(-3deg);
     transform-origin: center;
   }
 
